DP remarks corrected